# eQuimageLab

./: .gitignore  LICENSE  README.md  pyproject.toml  setversion  trash.py
aux/: HSVwheel.py
docs/: Makefile
docs/source/: api.rst  channels.rst  composite.rst  conf.py  dashboard.rst  examples.rst  firststeps.rst  image.rst  index.rst  installation.rst  processing.rst  usage.rst  userguide.rst
docs/source/notebooks/: dashboard_layouts.ipynb
misc/: HSVwheel.py  setversion  tests_wavelets.ipynb  wavelets_noise.py
src/equimage/: __init__.py  helpers.py  image.py  image_colors.py  image_colorspaces.py  image_editors.py  image_filters.py  image_geometry.py  image_hdr.py  image_io.py  image_masks.py  image_multiscale.py  image_skimage.py  image_stars.py  image_stats.py  image_stretch.py  image_utils.py  imports.py  params.py  stretchfunctions.py
src/equimagelab/: __init__.py  misc.py  params.py
src/equimagelab/docs/: Makefile
src/equimagelab/docs/source/: api.rst  channels.rst  composite.rst  conf.py  dashboard.rst  examples.rst  firststeps.rst  image.rst  index.rst  installation.rst  processing.rst  usage.rst  userguide.rst
src/equimagelab/docs/source/notebooks/: dashboard.ipynb
src/equimagelab/equimage/: __init__.py  helpers.py  image.py  image_colors.py  image_colorspaces.py  image_editors.py  image_filters.py  image_geometry.py  image_io.py  image_masks.py  image_multiscale.py  image_skimage.py  image_stars.py  image_stats.py  image_stretch.py  image_utils.py  imports.py  params.py  stretchfunctions.py  symbols.py  toplevel.py
src/equimagelab/examples/: equimagelab.ipynb  template.ipynb
src/equimagelab/jupyter/: __init__.py  backend_dash.py  backend_plotly.py  display.py  imports.py  params.py  toplevel.py  utils.py
src/equimagelab/jupyter/assets/: equimagelab.css
src/equimagelab/launcher/: __init__.py
src/equimagelab/misc/: CTdata.py  __init__.py
src/equimagelab/scripts/: CTdata.py  HSVwheel.py
src/equimagelab_launcher/: __init__.py
src/equimagelab_launcher/templates/: equimagelab.ipynb
